# GrannyHelper

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: COMMANDS.md
source/: main.py
source/command_handlers/: handlers.py
source/modules/: addressbook.py  help_info.py  record.py  storage.py
tests/: test_models.py
